--- a/Mudanzas.Core/Mudanzas.Core.csproj
+++ b/Mudanzas.Core/Mudanzas.Core.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mudanzas.Domain\Mudanzas.Domain.csproj" />
+    <ProjectReference Include="..\Mudanzas.Infraestructure\Mudanzas.Infraestructure.csproj" />
+  </ItemGroup>
+
 </Project>
