--- a/Mudanzas.Infraestructure/Mudanzas.Infraestructure.csproj
+++ b/Mudanzas.Infraestructure/Mudanzas.Infraestructure.csproj
@@ -1,12 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.0-preview.6.20306.1" />
   </ItemGroup>
 
 </Project>
