--- a/Mudanzas.Web/Mudanzas.Web.csproj
+++ b/Mudanzas.Web/Mudanzas.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.0-preview.6.20306.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Mudanzas.Core\Mudanzas.Core.csproj" />
   </ItemGroup>
 
